@@ -21,7 +21,7 @@ coefplot(object,\dots)
                 varnames=NULL, CI=2, vertical=TRUE, 
                 v.axis=TRUE, h.axis=TRUE,
                 cex.var=0.8, cex.pts=0.9, 
-                col.pts=1, var.las=2,
+                col.pts=1, pch.pts=20, var.las=2,
                 main=NULL, xlab=NULL, ylab=NULL, mar=c(1,3,5.1,2),
                 plot=TRUE, add=FALSE, epsilon=.1, \dots)
 
@@ -29,7 +29,7 @@ coefplot(object,\dots)
             CI=1, vertical=TRUE,
             v.axis=TRUE, h.axis=TRUE, 
             cex.var=0.8, cex.pts=0.9, 
-            col.pts=1, var.las=2, 
+            col.pts=1, pch.pts=20, var.las=2, 
             main=NULL, xlab=NULL, ylab=NULL, 
             plot=TRUE, add=FALSE, epsilon=.1,
             mar=c(1,3,5.1,2), \dots)
@@ -58,6 +58,7 @@ coefplot(object,\dots)
   \item{cex.var}{The fontsize of the varible names, default=0.8.}
   \item{cex.pts}{The size of data points, default=0.9.}
   \item{col.pts}{color of points and segments, default is black.}
+  \item{pch.pts}{symbol of points, default is solid dot.}
   \item{var.las}{the orientation of variable names against the axis, default is 2. 
     see the usage of \code{las} in \code{\link{par}}.}
   \item{main}{The main title (on top) using font and size (character
